# drivermap

./: .gitignore  INTEGRATION.md  Makefile  NOTICE  README.md  REFERENCES.md  SECURITY.md  __init__.py  benchmark.py  build_explorer.py  db_load.py  demo.py  dimensions.json  discover.py  evolution.py  extract.py  fetch.py  mcp_server.py  migrate_power.py  patch_narrative_outputs.py  patch_plain_language.py  pipeline.py  pyproject.toml  query.py  seeds.py  visualize.py
.github/workflows/: ci.yml
assets/: demo_output.txt
db/: mechanisms.sqlite
docs/: index.html
schema/: v1.json
tests/: conftest.py  test_archetypes.py  test_db.py  test_scoring.py  test_verbalize.py
tests/fixtures/: archetypes.json
